set (tinympl_HEADERS
accumulate.hpp
algorithm.hpp
algorithm_variadic.hpp
all_of.hpp
always_false.hpp
always_true.hpp
and_b.hpp
any_of.hpp
apply.hpp
as_sequence.hpp
as_unary_predicate.hpp
at.hpp
bind.hpp
bool.hpp
callable_traits.hpp
char.hpp
compatibility.hpp
contains_placeholder.hpp
copy.hpp
copy_if.hpp
copy_n.hpp
copy_traits.hpp
count.hpp
count_if.hpp
delay.hpp
divides.hpp
equal_to.hpp
erase.hpp
fill_n.hpp
filter.hpp
find_all.hpp
find_all_if.hpp
find.hpp
find_if.hpp
functional.hpp
fused_map.hpp
fused_value_map.hpp
generate_n.hpp
greater_equal.hpp
greater.hpp
identity.hpp
if.hpp
inherit.hpp
insert.hpp
int.hpp
is_instantiation.hpp
is_instantiation_of.hpp
is_sequence.hpp
is_suspension.hpp
is_suspension_of.hpp
is_unique.hpp
join.hpp
lambda.hpp
left_fold.hpp
less_equal.hpp
less.hpp
lexicographical_compare.hpp
logical_and.hpp
logical_not.hpp
logical_or.hpp
long.hpp
map.hpp
matches_pattern.hpp
max_element.hpp
metafunction_class_wrapper.hpp
min_element.hpp
minus.hpp
modulus.hpp
multiplies.hpp
negate.hpp
none_of.hpp
not_b.hpp
not_equal_to.hpp
or_b.hpp
plus.hpp
pop_back.hpp
pop_front.hpp
range_c.hpp
ratio.hpp
remove.hpp
remove_if.hpp
repeat.hpp
replace.hpp
replace_if.hpp
reverse.hpp
right_fold.hpp
sequence.hpp
set_difference.hpp
set_intersection.hpp
set_union.hpp
short.hpp
size.hpp
sizeof.hpp
sort.hpp
splat.hpp
string.hpp
string_macro.hpp
to_string.hpp
to_vector_c.hpp
transform2.hpp
transform.hpp
transform_many.hpp
transpose.hpp
tuple_as_sequence.hpp
unique.hpp
unordered_equal.hpp
value_map.hpp
variadic.hpp
vector.hpp
zip.hpp)


set (variadic_HEADERS
variadic/accumulate.hpp
variadic/all_of.hpp
variadic/any_of.hpp
variadic/at.hpp
variadic/back.hpp
variadic/copy.hpp
variadic/copy_if.hpp
variadic/copy_n.hpp
variadic/count.hpp
variadic/count_if.hpp
variadic/erase.hpp
variadic/fill_n.hpp
variadic/filter.hpp
variadic/find_all.hpp
variadic/find_all_if.hpp
variadic/find.hpp
variadic/find_if.hpp
variadic/generate_n.hpp
variadic/insert.hpp
variadic/is_unique.hpp
variadic/left_fold.hpp
variadic/max_element.hpp
variadic/min_element.hpp
variadic/none_of.hpp
variadic/pop_back.hpp
variadic/pop_front.hpp
variadic/remove.hpp
variadic/remove_if.hpp
variadic/replace.hpp
variadic/replace_if.hpp
variadic/reverse.hpp
variadic/right_fold.hpp
variadic/size.hpp
variadic/sort.hpp
variadic/splat.hpp
variadic/to_vector_c.hpp
variadic/transform.hpp
variadic/unique.hpp)

install (FILES ${tinympl_HEADERS} DESTINATION include/tinympl)
install (FILES ${variadic_HEADERS} DESTINATION include/tinympl/variadic)
